<resources>

    <string name="app_name">Rex Browser</string>
    <string name="theme_def">System Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="restart_suggestion_msg">Restart the app to see the effect.</string>
    <string name="apply_theme">Apply theme</string>

    <string name="action_new_tab">New Tab</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="block_ads">Block ads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_download_loc">Cannot download to the specified location</string>
    <string name="capture_screen">Capture screen</string>
    <string name="close_tabs_on_exit">Close tabs on exit</string>
    <string name="contact_partnership">Feedback</string>
    <string name="copied">Copied!</string>
    <string name="copy">Copy</string>
    <string name="copy_email">Copy email</string>
    <string name="copy_image_url">Copy image url</string>
    <string name="copy_num">Copy number</string>
    <string name="copy_url">Copy url</string>
    <string name="data_cleared">Data cleared!</string>
    <string name="delet">Delete</string>
    <string name="delet_item">Delete this item?</string>
    <string name="deleted">Deleted!</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="dialog_open_background_tab">Open in background tab</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="enable_images">Enable images</string>
    <string name="exit">Exit</string>
    <string name="find_in_page">Find in page</string>
    <string name="got_it">Got it</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="invalid_url">Invalid URL encountered, cannot download</string>
    <string name="message_added_to_homescreen">Shortcut added to homescreen</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="message_certificate_date_invalid">date of certificate is invalid</string>
    <string name="message_certificate_domain_mismatch">domain in certificate does not match the site domain</string>
    <string name="message_certificate_expired">certificate is expired</string>
    <string name="message_certificate_invalid">certificate is invalid</string>
    <string name="message_certificate_not_yet_valid">certificate is not yet valid</string>
    <string name="message_certificate_untrusted">certificate is not trusted</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="no">No</string>
    <string name="no_bookmarks">No bookmarks</string>
    <string name="no_email_app">There are no email client installed on your device.</string>
    <string name="no_more_tabs">No more tabs</string>
    <string name="no_save_sacreenshot">Screen shot capture failed</string>
    <string name="ok">OK</string>
    <string name="only_http">Can only download http or https URLs.</string>
    <string name="open">Open</string>
    <string name="open_in_new">Open in new tab</string>
    <string name="permission_msg_READ_EXTERNAL_STORAGE">2: READ_EXTERNAL_STORAGE - Helps you to upload files</string>
    <string name="permission_msg_WRITE_EXTERNAL_STORAGE">1: WRITE_EXTERNAL_STORAGE - Helps you to save downloaded files</string>
    <string name="permission_msg_text">If you do not allow certain permission, app may not be able to provide certain service to you.</string>
    <string name="permissions_title">For better experience, the following permissions are requested</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="rating_desc">Tell us what you like and dislike in this app by giving a review and suggestion</string>
    <string name="rating_title">How was your experience with us?</string>
    <string name="save_image">Save image</string>
    <string name="save_screenshot">Screen shot saved to</string>
    <string name="save_to_bookmarks">Save url to bookmarks</string>
    <string name="saved_to_bookmarks">Saved to bookmarks</string>
    <string name="search_anything">Search</string>
    <string name="search_empty">Search result is empty</string>
    <string name="search_menu_title">Search</string>
    <string name="send_email">Send email</string>
    <string name="set_search_engine">Set search engine</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_app_msg">Hey download this cool browser i found on Google play. </string>
    <string name="share_app_title">Check out this web browser app.</string>
    <string name="share_email">Share email</string>
    <string name="share_image_url">Share image url</string>
    <string name="share_num">Share number</string>
    <string name="share_url">Share url</string>
    <string name="share_with">Share with?</string>
    <string name="starting_download">Starting download:</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_form_resubmission">Form Resubmission</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_warning">Warning</string>
    <string name="toast_wait_a_minute">Saving screenshot…</string>
    <string name="translate">Translate</string>
    <string name="untitled">Untitled</string>
    <string name="view_image">View image</string>
    <string name="wait_until_page_loads">Wait until the webpage loads</string>
    <string name="yes">Yes</string>
    <string name="toastAn13">This feature supports up to Android 12</string>
    <string name="action_share">Share</string>
    <string name="action_toggle_ad_blocking">Ad blocking</string>
    <string name="action_download">Download</string>
    <string name="action_help">Help &amp; feedback</string>
    <string name="policy">Privacy Policy</string>
    <string name="link_policy">https://rexvit.com/rex-browser/privacy-and-policy</string>
    <string name="email_dev">hello@rexvit.com</string>


    <string name="active_downloads">%d Active downloads</string>
    <string name="are_you_sure_to_delete">Are you sure do you want to delete?</string>
    <string name="browse_files">Browse files</string>
    <string name="cant_share_file">Can\'t share files</string>
    <string name="completed">Completed</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="download">Download</string>
    <string name="download_completed">Download completed</string>
    <string name="download_link">Link</string>
    <string name="download_path">Download path</string>
    <string name="downloading">Downloading</string>
    <string name="downloads">Downloads</string>
    <string name="error">Error</string>
    <string name="exit_app_has_no_permission">This app can\'t run because it does not have the read and write permissions. The app will now exit.</string>


    <string name="file_name">Name</string>

    <string name="invalid_file_name">Invalid file name</string>
    <string name="items">items</string>

    <string name="no_active_downloads">No active downloads</string>
    <string name="no_app_to_open_file">You may not have a proper app to open this file</string>
    <string name="no_completed_downloads">No completed downloads</string>
    <string name="no_directories">No directories</string>
    <string name="not_queued">Not queued</string>
    <string name="notification_channel_loud_id">FlashLound</string>
    <string name="notification_channel_loud_name">FlashLoudName</string>
    <string name="notification_channel_silent_id">FlashSilent</string>
    <string name="notification_channel_silent_name">FlashSilentName</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>

    <string name="fetch_notification_default_channel_id">fetch_downloads_channel_id</string>
    <string name="fetch_notification_default_channel_name">Downloads</string>
    <string name="fetch_notification_download_cancel">Cancel</string>
    <string name="fetch_notification_download_complete">Complete</string>
    <string name="fetch_notification_download_downloading">Downloading</string>
    <string name="fetch_notification_download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="fetch_notification_download_eta_min">%1$dm %2$ds left</string>
    <string name="fetch_notification_download_eta_sec">%1$ds left</string>
    <string name="fetch_notification_download_failed">Failed</string>
    <string name="fetch_notification_download_pause">Pause</string>
    <string name="fetch_notification_download_paused">Paused</string>
    <string name="fetch_notification_download_resume">Resume</string>
    <string name="fetch_notification_download_retry">Retry</string>
    <string name="fetch_notification_download_starting">Starting</string>

    <string name="pause_all">Pause all</string>
    <string name="paused">Paused</string>
    <string name="remove">Remove</string>
    <string name="removed">Removed</string>

    <string name="search">Search</string>
    <string name="selected">Selected</string>
    <string name="share_this_file_via">Share this file via</string>
    <string name="start_all">Start all</string>
    <string name="storage">Storage</string>
    <string name="unknown">Unknown</string>
    <string name="update">Update</string>
    <string name="update_url">Update url</string>
    <string name="waiting_in_queue">Waiting in queue</string>


    <string name="str_app_name_editor">Rex Editor</string>

    <string name="id_admob">ca-app-pub-6737337717888276~4766382652</string>
    <string name="ads_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_instritial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="more">more</string>
    <string name="themes">Themes\n</string>
    <string name="okay">OK</string>
    <string name="edt_name">Editor</string>
    <string name="bookmark_already_added">Bookmark already added</string>
    <string name="page_already_added">This page is already added.</string>
    <string name="page_exists">The page already exists</string>
    <string name="addnewpage">add New Page</string>
    <string name="enter_page_name">Enter page name</string>
    <string name="enter_page_url">Enter page URL</string>

</resources>