<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/theme_choose_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
      >

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/bnt_system_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_def"
            android:checked="true"
            android:padding="@dimen/dp_10"
            tools:targetApi="m" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/bnt_light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:padding="@dimen/dp_10"
            tools:targetApi="m" />
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/bnt_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:padding="@dimen/dp_10"
            tools:targetApi="m" />

    </RadioGroup>
</LinearLayout>
